--- a/Aula1.ipynb
+++ b/Aula1.ipynb
@@ -19,6 +19,341 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\03268897959\\\\Documents\\\\intro_python'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " O volume na unidade C ‚ OS\n",
+      " O N£mero de S‚rie do Volume ‚ 1C65-732C\n",
+      "\n",
+      " Pasta de C:\\Users\\03268897959\\Documents\\intro_python\n",
+      "\n",
+      "22/08/2018  14:36    <DIR>          .\n",
+      "22/08/2018  14:36    <DIR>          ..\n",
+      "22/08/2018  13:56    <DIR>          .ipynb_checkpoints\n",
+      "22/08/2018  14:36             1.868 Aula1.ipynb\n",
+      "22/08/2018  14:17               105 README.md\n",
+      "               2 arquivo(s)          1.973 bytes\n",
+      "               3 pasta(s)   923.572.174.848 bytes dispon¡veis\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting entrevista.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file entrevista.py\n",
+    "# Salva o código com o nome do arquivo\n",
+    "\n",
+    "primeiro_nome = str(input(\"Digite seu primeiro nome: \"))\n",
+    "print(\"Bom dia \" + primeiro_nome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load entrevista.py\n",
+    "# Salva o código com o nome do arquivo\n",
+    "\n",
+    "primeiro_nome = str(input(\"Digite seu primeiro nome: \"))\n",
+    "print(\"Bom dia \" + primeiro_nome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite seu primeiro nome: Rafael\n",
+      "Bom dia Rafael\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run entrevista.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Salva o cÃ³digo com o nome do arquivo\n",
+      "\n",
+      "primeiro_nome = str(input(\"Digite seu primeiro nome: \"))\n",
+      "print(\"Bom dia \" + primeiro_nome)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!type entrevista.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__doc__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'acos',\n",
+       " 'acosh',\n",
+       " 'asin',\n",
+       " 'asinh',\n",
+       " 'atan',\n",
+       " 'atan2',\n",
+       " 'atanh',\n",
+       " 'ceil',\n",
+       " 'copysign',\n",
+       " 'cos',\n",
+       " 'cosh',\n",
+       " 'degrees',\n",
+       " 'e',\n",
+       " 'erf',\n",
+       " 'erfc',\n",
+       " 'exp',\n",
+       " 'expm1',\n",
+       " 'fabs',\n",
+       " 'factorial',\n",
+       " 'floor',\n",
+       " 'fmod',\n",
+       " 'frexp',\n",
+       " 'fsum',\n",
+       " 'gamma',\n",
+       " 'gcd',\n",
+       " 'hypot',\n",
+       " 'inf',\n",
+       " 'isclose',\n",
+       " 'isfinite',\n",
+       " 'isinf',\n",
+       " 'isnan',\n",
+       " 'ldexp',\n",
+       " 'lgamma',\n",
+       " 'log',\n",
+       " 'log10',\n",
+       " 'log1p',\n",
+       " 'log2',\n",
+       " 'modf',\n",
+       " 'nan',\n",
+       " 'pi',\n",
+       " 'pow',\n",
+       " 'radians',\n",
+       " 'sin',\n",
+       " 'sinh',\n",
+       " 'sqrt',\n",
+       " 'tan',\n",
+       " 'tanh',\n",
+       " 'tau',\n",
+       " 'trunc']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "dir(math)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(120, 3.141592653589793)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(math.factorial(5), math.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function degrees in module math:\n",
+      "\n",
+      "degrees(...)\n",
+      "    degrees(x)\n",
+      "    \n",
+      "    Convert angle x from radians to degrees.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(math.degrees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.degrees(math.pi / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function ldexp in module math:\n",
+      "\n",
+      "ldexp(...)\n",
+      "    ldexp(x, i)\n",
+      "    \n",
+      "    Return x * (2**i).\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(math.ldexp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crie seu primeiro programa.py\n",
+    "# Entrada do programa: mês e ano do nascimento\n",
+    "# Saída: Idade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing idade.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file idade.py\n",
+    "\n",
+    "import datetime as dt\n",
+    "\n",
+    "mes = input(\"Digite o mês de seu nascimento: \")\n",
+    "ano = input(\"Digite o ano de seu nascimento: \")\n",
+    "\n",
+    "today = dt.datetime.now()\n",
+    "print(idade_ano)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite o mês de seu nascimento: 01\n",
+      "Digite o ano de seu nascimento: 1980\n",
+      "08/22/18\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run idade.py"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
