Sinc com notebook

--- a/Aula1.ipynb
+++ b/Aula1.ipynb
@@ -310,32 +310,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing idade.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%file idade.py\n",
     "\n",
     "import datetime as dt\n",
     "\n",
-    "mes = input(\"Digite o mês de seu nascimento: \")\n",
-    "ano = input(\"Digite o ano de seu nascimento: \")\n",
+    "mes = int(input(\"Digite o mês de seu nascimento: \"))\n",
+    "ano = int(input(\"Digite o ano de seu nascimento: \"))\n",
     "\n",
     "today = dt.datetime.now()\n",
-    "print(idade_ano)"
+    "#print(today.year)\n",
+    "idade_anos = today.year - ano\n",
+    "print(\"Sua idade é:\", idade_anos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +338,7 @@
      "text": [
       "Digite o mês de seu nascimento: 01\n",
       "Digite o ano de seu nascimento: 1980\n",
-      "08/22/18\n"
+      "Sua idade é: 38\n"
      ]
     }
    ],
